# rapGPT

./: .gitignore  README.md  pyproject.toml
app/: app.py
configs/: config.toml
scripts/: download_data.py  push_to_hf_hub.py  train.py
src/rapgpt/: callbacks.py  config.py  data.py  dataset.py  encoder.py  model.py  train.py  trainer.py
