[project]
name = "rapgpt"
version = "0.1.0"
description = "Simple GPT generating French rap lyrics"
authors = [
    { name = "hugojarkoff", email = "hugo.jarkoff@gmail.com" }
]
dependencies = [
    "tiktoken>=0.6.0",
    "ruff>=0.3.0",
    "torch>=2.2.2",
    "pydantic>=2.7.1",
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "tomli>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
data = [
    "kaggle>=1.6"
]

[project.scripts]

[tool.rye.scripts]
lint = { chain = ["ruff format .", "ruff check --fix ."] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rapgpt"]
